@@ -8,6 +8,14 @@
 <li>Fix the visual glitch in which the unread count and progress indicator were slightly overlapping with the scroll bar if present.</li>
 <li>Update the styles menu in the toolbar when adding a style.</li>
 <li>Added Portuguese localisation. (Thanks to Rui Carlos A. Gonçalves).</li>
+<li>Added Turkish localisation. (Thanks to Emrah Omuris).</li>
+<li>Updated German, Italian, Traditional Chinese, and Ukranian localisations.</li>
+<li>Updated Spanish localisation (Thanks to Dani Carril).</li>
+<li>Fix feed parsing crash on PowerPC machines (Patch from Paul Livesey).</li>
+<li>Possible fix for crashes in ArticleController.</li>
+<li>Fix the truncated right pane in Leopard.</li>
+<li>Fix long-standing issue with many messages in console.log while downloading (Patch from Martin Häcker).</li>
+<li>Add support for blogging with MarsEdit 2.</li>
 </ul>
 </body>
 </html>
